// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps returns the right keys 1`] = `
Object {
  "fetchGroupTopics": [Function],
  "selectGroup": [Function],
  "setTerm": [Function],
  "setTopicSubscribe": [Function],
}
`;

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "filteredTopics": Array [],
  "group": Object {
    "avatarUrl": undefined,
    "bannerUrl": undefined,
    "childGroups": Object {
      "toModelArray": [Function],
    },
    "headerAvatarUrl": undefined,
    "id": "all",
    "name": "All My Groups",
    "parentGroups": Object {
      "toModelArray": [Function],
    },
    "slug": "all",
  },
  "groupHasTopics": false,
  "pending": true,
  "searchTerm": undefined,
}
`;

exports[`mergeProps sets up functions 1`] = `
Object {
  "fetchGroupTopics": [Function],
  "goToTopic": [Function],
  "group": Object {
    "id": 132,
  },
  "navigation": Object {
    "navigate": [MockFunction],
  },
  "setTopicSubscribe": [Function],
}
`;
